<resources>
    <string name="app_name">PasienQu Pro</string>
    <string name="company_names"><b></b>
    </string>
    <string name="database_name">pasienqu.db</string>
    <string name="database_name_v1">pasienqu_v1.db</string>
    <string name="database_name_blob">pasienqu_blob.db</string>
    <string name="refresh">Refresh</string>
    <string name="take_picture">Take Picture</string>
    <string name="choose_picture">Select Picture</string>
    <string name="notes">Notes</string>
    <string name="log_out">Logout</string>
    <string name="login">Login</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="user_id_must_be_filled">User ID must be filled.</string>
    <string name="password_must_be_filled">Password must be filled.</string>
    <string name="information">Information</string>
    <string name="login_access_denied_error">Your login and password do not match, or your account is already inactive.</string>
    <string name="finish">Finish</string>
    <string name="add_title">Create %s</string>
    <string name="detail_title">%s Detail</string>
    <string name="edit_title">Edit %s</string>
    <string name="passenger_value">Passenger : %s</string>
    <string name="total_expense_value">Total Expense : %s</string>
    <string name="loading">Loading...</string>
    <string name="sign_in">Sign In</string>
    <string name="filter_data">Filter Data</string>
    <string name="must_be_online">You have to be online to perform this action. Please check your internet connection.</string>
    <string name="date_cannot_in_the_future">You cannot %s date in the future.</string>
    <string name="field_must_be_select">%s is required.</string>
    <string name="field_is_empty">%s is required.</string>
    <string name="image">Image</string>
    <string name="field_must_be_filled">%s date is required.</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Canceled</string>
    <string name="title_home">Home</string>
    <string name="title_patients">Patients</string>
    <string name="title_records">Records</string>
    <string name="title_calender">Calendar</string>
    <string name="title_more">More</string>
    <string name="title_home_patient_text">Patients</string>
    <string name="title_home_medical_record_text">Medical Records</string>
    <string name="title_home_billing_text">Billings</string>
    <string name="title_home_tipe_total_total">Total</string>
    <string name="title_home_tipe_total_today">Today</string>
    <string name="appointment">Appointment</string>
    <string name="set">Set</string>
    <string name="sign_up">Sign Up</string>
    <string name="reminder">Reminder</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="back">Back</string>
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome to PasienQu!</string>
    <string name="forget_pass">Forget Password?</string>
    <string name="signup_atention">Please take a moment to register before using our app.</string>
    <string name="chk_agreement">Yes, I Understand and choose to continue.</string>
    <string name="agreement">After activating your registration, you are eligible to try our service for 180 days for free. After that, please subscribe to continue using it. At that moment, a non recurring payment is required for subscription period of your choice (30 or 365 days).</string>
    <string name="send_email">Send E-mail</string>
    <string name="inform_reset_pass">Please input e-mail address you chose when registering. We will send a reset password instruction to the e-mail address.</string>
    <string name="test_ku">Test Ku</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="set_language">Set Language</string>
    <string name="pin_protection">PIN Protection</string>
    <string name="auto_generate_id">Auto Generate Patient ID</string>
    <string name="work_location">Work Location</string>
    <string name="renew_subscription">Extend Usage Period</string>
    <string name="billing_templates">Billing Templates</string>
    <string name="note_templates">Note Templates</string>
    <string name="sub_accounts">Subaccounts</string>
    <string name="import_database">Import from PasienQu V1</string>
    <string name="export_excel">Export To Excel</string>
    <string name="category">Category</string>
    <string name="template">Template</string>
    <string name="search_patient">Search Patients</string>
    <string name="search_calendar">Search Appointments</string>
    <string name="reset">Reset</string>
    <string name="sort">Sort</string>
    <string name="synchronize">Synchronize</string>
    <string name="location">Location</string>
    <string name="remarks">Remarks</string>
    <string name="work_locations">Work Locations</string>
    <string name="error_name">Name is required.</string>
    <string name="error_location">Location is required.</string>
    <string name="work_location_no_data">There is currently no work location. Please add one using button below.</string>
    <string name="billing_no_data">There is currently no billing template. Please add one using button below.</string>
    <string name="patient_id">Patient ID</string>
    <string name="first_name">First Name</string>
    <string name="gender">Gender</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="month">Month</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="identification_number">Identification Number (NIK/IHS)</string>
    <string name="occupation">Occupation</string>
    <string name="contact">Contact No</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="error_patient_id">Patient ID is required.</string>
    <string name="error_first_name">First Name is required.</string>
    <string name="error_gender">Gender is required.</string>
    <string name="error_date_birth">Date of Birth is required.</string>
    <string name="profile">Profile</string>
    <string name="register_date">Register Date</string>
    <string name="patient_remark1">Patient Remarks 1</string>
    <string name="patient_remark2">Patient Remarks 2</string>
    <string name="lov">...</string>
    <string name="field_must_be_fill">There is an error in one or more input fields. Please review again.</string>
    <string name="patient_month_input_error">Please input month between 0 and 11.</string>
    <string name="years">years</string>
    <string name="months">months.</string>
    <string name="medical_records">Medical Records</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="archive">Archive</string>
    <string name="age_from">Age From</string>
    <string name="age_to">Age To</string>
    <string name="to">To</string>
    <string name="name_must_be_unique">Name must be unique.</string>
    <string name="error_template">Template is required.</string>
    <string name="anamnesa">Anamnesa</string>
    <string name="diagnosa">Diagnosa</string>
    <string name="physical_exam">Physical Exam</string>
    <string name="therapy">Therapy</string>
    <string name="others">Others</string>
    <string name="filter">Filter</string>
    <string name="dates">Dates</string>
    <string name="date">Date</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="english">English</string>
    <string name="bahasa_indonesia">Bahasa Indonesia</string>
    <string name="old_password">Old Password</string>
    <string name="inform_change_password">Please input your old password, then your new password and confirmation.</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="zip">Zip</string>
    <string name="pin">PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="inform_protect_pin">Protect with PIN?</string>
    <string name="error_pin">PIN must be 6 digits.</string>
    <string name="renewal_month">Extend usage period : 30 days</string>
    <string name="renewal_year">Extend usage period : 365 days</string>
    <string name="idr_3000">IDR 99,000</string>
    <string name="idr_5000">IDR 1,000,000</string>
    <string name="activiting_full_access">Purchasing this subscription will allow you full access to \t</string>
    <string name="activiting_read_only">\t and read-only access to \t</string>
    <string name="inform_autogenerate_id">Automatically generate ID of the patient</string>
    <string name="generate_patient_id_title">Patient ID Setting</string>
    <string name="items">Items</string>
    <string name="label">Label</string>
    <string name="desc">Description</string>
    <string name="nominal">Amount</string>
    <string name="search_record">Search Medical Records</string>
    <string name="record_date">Record Date</string>
    <string name="patient">Patient</string>
    <string name="error_patient">Patient is required.</string>
    <string name="weight">Weight</string>
    <string name="systolic">Systolic</string>
    <string name="temperature">Temperature</string>
    <string name="diastolic">Diastolic</string>
    <string name="icd">ICD</string>
    <string name="prescription_file">Prescription File</string>
    <string name="files">Other Files</string>
    <string name="billing_total">Billing Amount</string>
    <string name="rp">Rp.</string>
    <string name="medical_record_title">Medical Record</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="kilogram">kg</string>
    <string name="heart_rate">mm/Hg</string>
    <string name="celcius">°C</string>
    <string name="this_month">This Month</string>
    <string name="last_month">Last Month</string>
    <string name="notice_export1">Please take a moment to read this notice before continuing.</string>
    <string name="notice_export2">
        1. You must be online to continue.\n\n<br /><br />
        2. it is necessary to do data synchronization first, to ensure the data on our server is the latest one.\n\n<br /><br />
        3. Data on other devices that are unavaible or offline may not be updated or included on the result; please ensure they are online.
    </string>
    <string name="export">Export</string>
    <string name="unarchive">Unarchive</string>
    <string name="logged_as">"Logged in as %s "</string>
    <string name="information_master_device">Master device is the main device used for data input. Data can only be uploaded from the master device while other devices can only download. This is to avoid data version mismatch/conflict. Make sure this setting is correct so no data should miss.</string>
    <string name="upload">Backup Database</string>
    <string name="restore">Restore Database</string>
    <string name="master_device">Master Device</string>
    <string name="title_appointment">Appointments</string>
    <string name="reminder_1day">1 Days</string>
    <string name="reminder_3day">3 Days</string>
    <string name="reminder_7day">7 Days</string>
    <string name="reminder_30day">30 Days</string>
    <string name="reminder_never">Never</string>
    <string name="notice_set_remind_backup">Set this reminder in order to receive periodic notifications according to the period you choose.</string>
    <string name="title_setting_reminder">Backup Reminder Setting</string>
    <string name="setting_backup">Backup and Restore Settings</string>
    <string name="include_image_and_file">Include image and file</string>
</resources>