<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_patients"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_patients" />

    <item
        android:id="@+id/navigation_records"
        android:icon="@drawable/ic_baseline_book_24"
        android:title="@string/title_records" />


    <item
        android:id="@+id/navigation_calender"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        android:title="@string/title_appointment" />


    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_more" />

</menu>