<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_filter"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/filter" />
    <item
        android:id="@+id/menu_reset"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/reset" />
    <item
        android:id="@+id/menu_synchronize"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/synchronize" />

    <item
        android:id="@+id/menu_sort"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/sort" />

</menu>